# BlackSwans

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  agent_todo.md  pyproject.toml  requirements.txt  validate_outliers.py
api/: README.md  __init__.py  main.py  models.py
data/: AGG_1976-01-01_to_2010-12-31.csv  AGG_2003-09-29_to_2025-01-31.csv  EEM_1988-01-01_to_2010-12-31.csv  EEM_2003-04-14_to_2025-01-31.csv  EFA_1970-01-01_to_2010-12-31.csv  EFA_2001-08-27_to_2025-01-31.csv  VNQ_1970-01-01_to_2010-12-31.csv  VNQ_2004-09-29_to_2025-01-31.csv  _AXJO_1970-01-01_to_2010-12-31.csv  _AXJO_1992-11-23_to_2025-01-31.csv  _FCHI_1970-01-01_to_2010-12-31.csv  _FCHI_1990-03-01_to_2025-01-31.csv  _FTSE_1970-01-01_to_2010-12-31.csv  _FTSE_1984-01-03_to_2025-01-31.csv  _GDAXI_1970-01-01_to_2010-12-31.csv  _GDAXI_1987-12-30_to_2025-01-31.csv  _GSPC_1928-09-01_to_2010-12-31.csv  _GSPC_1928-09-04_to_2025-01-31.csv  _GSPC_1970-01-01_to_2010-12-31.csv  _GSPC_1976-01-01_to_2010-12-31.csv  _GSPC_1988-01-01_to_2010-12-31.csv  _GSPC_1999-09-01_to_2010-12-31.csv  _GSPTSE_1970-01-01_to_2010-12-31.csv  _GSPTSE_1979-06-29_to_2025-01-31.csv  _HSI_1970-01-01_to_2010-12-31.csv  _HSI_1986-12-31_to_2025-01-28.csv  _N225_1970-01-01_to_2010-12-31.csv  _N225_1970-01-05_to_2025-01-31.csv
docs/: audit_report.md  validation_report.md
frontend/: index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
output/: outlier_regime_counts.csv  outlier_stats.csv  regime_performance.csv  return_scenarios.csv
scripts/: generate_static_data.py  precompute.py  (+1 more)
(+107 files in other folders)
