[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "blackswans"
version = "0.2.0"
description = "Validate and extend Faber's 2011 analysis of market outliers and regime clustering"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.3",
    "numpy>=1.21",
    "matplotlib>=3.4",
    "scipy>=1.7",
    "yfinance>=0.2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
]

[project.scripts]
blackswans = "blackswans.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.black]
line-length = 100
